--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
@@ -127,6 +127,8 @@
 					<show id="survey:fsLinkedCharactRefs" force="true" />
 					<show id="survey:fsLinkedTypes" force="true" />
 					<show id="survey:fsLinkedHierarchy" force="true" />
+					<show id="bcpg:subsidiaryRef" force="true" />
+					<show id="bcpg:plants" force="true" />
 				</field-visibility>
 				<appearance>
 					<set id="surveyQuestion" appearance="bordered-panel" label-id="becpg.forms.set.survey-question.label" />
@@ -198,6 +200,8 @@
 							<control-param name="saveTitle">false</control-param>
 						</control>
 					</field>
+					<field id="bcpg:subsidiaryRef" set="surveyAutogeneration"/>
+					<field id="bcpg:plants" set="surveyAutogeneration"/>
 				</appearance>
 			</form>
 			<form id="create">
@@ -325,6 +329,8 @@
 					<show id="survey:fsLinkedCharactRefs" force="true" />
 					<show id="survey:fsLinkedTypes" force="true" />
 					<show id="survey:fsLinkedHierarchy" force="true" />
+					<show id="bcpg:subsidiaryRef" force="true" />
+					<show id="bcpg:plants" force="true" />
 				</field-visibility>
 				<appearance>
 					<set id="surveyQuestion" appearance="bordered-panel" label-id="becpg.forms.set.survey-question.label" />
@@ -396,6 +402,8 @@
 							<control-param name="saveTitle">false</control-param>
 						</control>
 					</field>
+					<field id="bcpg:subsidiaryRef" set="surveyAutogeneration"/>
+					<field id="bcpg:plants" set="surveyAutogeneration"/>
 				</appearance>
 			</form>
 			<form id="create">
