--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
@@ -886,9 +886,9 @@
 					<show force="true" id="bcpg:certificateDate" />
 					<show force="false" id="cm:taggable" />
 					<show force="false" id="cm:categories" />
-					<show force ="true" id="bcpg:regulatoryMode" />
-					<show force="true" id="bcpg:regulatoryCountries" />
-					<show force="true" id="bcpg:regulatoryUsageRef" />
+					<show id="bcpg:regulatoryMode" />
+					<show id="bcpg:regulatoryCountries" />
+					<show id="bcpg:regulatoryUsageRef" />
 				</field-visibility>
 				<appearance>
 					<set appearance="bordered-panel" id="mainInfo" label-id="becpg.forms.set.designation.label"
