--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -1732,6 +1732,31 @@
 					<field id="bcpg:isDeleted">
 						<control template="/org/alfresco/components/form/controls/boolean.ftl" />
 					</field>
+					<field id="bcpg:toxCalculateSystemic">
+						<control template="/org/alfresco/components/form/controls/boolean.ftl">
+							<control-param name="isSearch">true</control-param>
+						</control>
+					</field>
+					<field id="bcpg:toxCalculateMax">
+						<control template="/org/alfresco/components/form/controls/boolean.ftl">
+							<control-param name="isSearch">true</control-param>
+						</control>
+					</field>
+					<field id="bcpg:toxCalculateSystemic">
+						<control template="/org/alfresco/components/form/controls/boolean.ftl">
+							<control-param name="isSearch">true</control-param>
+						</control>
+					</field>
+					<field id="bcpg:toxCalculateMax">
+						<control template="/org/alfresco/components/form/controls/boolean.ftl">
+							<control-param name="isSearch">true</control-param>
+						</control>
+					</field>
+					<field id="bcpg:toxValue">
+						<control template="/org/alfresco/components/form/controls/numberrange.ftl">
+							<control-param name="isSearch">true</control-param>
+						</control>
+					</field>
 				</appearance>
 			</form>
 
@@ -8350,17 +8375,37 @@
 					<show id="bcpg:isManualListItem" force="true" />
 				</field-visibility>
 				<appearance>
-					<field id="bcpg:toxListTox" >
-						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
+					<field id="bcpg:toxListTox">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					</field>
+				</appearance>
+			</form>
+			<form id="filter">
+				<field-visibility>
+					<show id="bcpg:toxListTox" />
+					<show id="bcpg:toxListValue" />
+					<show id="bcpg:isManualListItem" force="true" />
+				</field-visibility>
+				<appearance>
+					<field id="bcpg:toxListTox">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					</field>
+					<field id="bcpg:toxListValue">
+						<control template="/org/alfresco/components/form/controls/numberrange.ftl">
+							<control-param name="isSearch">true</control-param>
 						</control>
 					</field>
-
-					<field id="bcpg:toxListValue" />
+					<field id="bcpg:isManualListItem">
+						<control template="/org/alfresco/components/form/controls/boolean.ftl">
+							<control-param name="isSearch">true</control-param>
+							<control-param name="forceEditable">true</control-param>
+						</control>
+					</field>
 				</appearance>
 			</form>
 		</forms>
 	</config>
-	
+
 	<config evaluator="node-type" condition="bcpg:toxList">
 		<forms>
 			<!-- Create item form -->
@@ -8371,13 +8416,9 @@
 					<show id="bcpg:isManualListItem" force="true" />
 				</field-visibility>
 				<appearance>
-					<field id="bcpg:toxListTox" >
-						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
-						</control>
+					<field id="bcpg:toxListTox">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
 					</field>
-
-					<field id="bcpg:toxListValue" />
-
 				</appearance>
 			</form>
 		</forms>
