--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -8214,6 +8214,7 @@
 					<show id="bcpg:ingListQtyPerc2" force="true" />
 					<show id="bcpg:ingListQtyPerc3" force="true" />
 					<show id="bcpg:ingListQtyPerc4" force="true" />
+					<show id="bcpg:ingListQtyPerc5" force="true" />
 					<show id="bcpg:ingListQtyMini" />
 					<show id="bcpg:ingListQtyMaxi" />
 
@@ -8253,6 +8254,7 @@
 					<field id="bcpg:ingListQtyPerc2" set="2-col-1" />
 					<field id="bcpg:ingListQtyPerc3" set="2-col-1" />
 					<field id="bcpg:ingListQtyPerc4" set="2-col-1" />
+					<field id="bcpg:ingListQtyPerc5" set="2-col-1" />
 
 
 					<field id="bcpg:ingListQtyMini" set="2-col-1" />
@@ -8324,6 +8326,7 @@
 					<show id="bcpg:ingListQtyPerc2" />
 					<show id="bcpg:ingListQtyPerc3" />
 					<show id="bcpg:ingListQtyPerc4" />
+					<show id="bcpg:ingListQtyPerc5" />
 					<show id="bcpg:ingListIsGMO" />
 					<show id="bcpg:ingListIsIonized" />
 					<show id="bcpg:ingListIsProcessingAid" />
@@ -8422,6 +8425,7 @@
 					<show id="bcpg:ingListQtyPerc2" />
 					<show id="bcpg:ingListQtyPerc3" />
 					<show id="bcpg:ingListQtyPerc4" />
+					<show id="bcpg:ingListQtyPerc5" />
 					<show id="bcpg:ingListIsGMO" />
 					<show id="bcpg:ingListIsIonized" />
 					<show id="bcpg:ingListIsProcessingAid" />
@@ -8548,6 +8552,7 @@
 					<show id="bcpg:ingListQtyPerc2" force="true" />
 					<show id="bcpg:ingListQtyPerc3" force="true" />
 					<show id="bcpg:ingListQtyPerc4" force="true" />
+					<show id="bcpg:ingListQtyPerc5" force="true" />
 					<show id="bcpg:ingListQtyMini" />
 					<show id="bcpg:ingListQtyMaxi" />
 					<show id="bcpg:ingListIsGMO" />
@@ -8590,6 +8595,7 @@
 					<field id="bcpg:ingListQtyPerc2" set="2-col-1" />
 					<field id="bcpg:ingListQtyPerc3" set="2-col-1" />
 					<field id="bcpg:ingListQtyPerc4" set="2-col-1" />
+					<field id="bcpg:ingListQtyPerc5" set="2-col-1" />
 					<field id="bcpg:ingListQtyMini" set="2-col-1" />
 					<field id="bcpg:ingListQtyMaxi" set="2-col-1" />
 
