--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
@@ -4,16 +4,16 @@
       <form>
         <field-visibility>
           <show force="false" id="cm:name"/>
-          <show force="false" id="gs1:descriptionShort"/>
-          <show force="false" id="gs1:functionalName"/>
           <show force="true" id="cm:title"/>
-          <show force="false" id="gs1:variantDescription"/>
           <show force="false" id="bcpg:productHierarchy1"/>
           <show force="false" id="bcpg:productHierarchy2"/>
           <show force="false" id="bcpg:legalName"/>
-          <show force="false" id="bcpg:productComments"/>
+          <show force="false" id="gs1:descriptionShort"/>
+          <show force="false" id="gs1:functionalName"/>
+          <show force="false" id="gs1:variantDescription"/>
           <show force="true" id="cm:description"/>
           <show force="true" id="bcpg:packagingDescription"/>
+          <show force="false" id="bcpg:productComments"/>
           <show force="false" id="bcpg:productState"/>
           <show force="false" id="bcpg:code"/>
           <show force="true" id="bcpg:erpCode"/>
@@ -1952,11 +1952,14 @@
           <show force="false" id="bcpg:productHierarchy1"/>
           <show force="false" id="bcpg:productHierarchy2"/>
           <show force="false" id="bcpg:legalName"/>
-          <show force="false" id="bcpg:productComments"/>
+          <show force="false" id="gs1:descriptionShort"/>
+          <show force="false" id="gs1:functionalName"/>
+          <show force="false" id="gs1:variantDescription"/>
           <show force="true" id="cm:description"/>
           <show force="true" id="bcpg:packagingDescription"/>
-          <show force="true" id="bcpg:entityTplRef"/>
+          <show force="false" id="bcpg:productComments"/>
           <show force="false" id="bcpg:productState"/>
+          <show force="true" id="bcpg:entityTplRef"/>
           <show force="false" id="bcpg:code"/>
           <show force="true" id="bcpg:erpCode"/>
           <show force="false" id="bcpg:eanCode"/>
@@ -2244,18 +2247,18 @@
       </form>
       <form id="bulk-edit">
         <field-visibility>
-          <show force="true" id="cm:name"/>
-          <show force="true" id="gs1:descriptionShort"/>
-          <show force="true" id="gs1:functionalName"/>
+          <show force="false" id="cm:name"/>
           <show force="true" id="cm:title"/>
-          <show force="true" id="gs1:variantDescription"/>
-          <show force="true" id="bcpg:productHierarchy1"/>
-          <show force="true" id="bcpg:productHierarchy2"/>
-          <show force="true" id="bcpg:legalName"/>
-          <show force="true" id="bcpg:productComments"/>
+          <show force="false" id="bcpg:productHierarchy1"/>
+          <show force="false" id="bcpg:productHierarchy2"/>
+          <show force="false" id="bcpg:legalName"/>
+          <show force="false" id="gs1:descriptionShort"/>
+          <show force="false" id="gs1:functionalName"/>
+          <show force="false" id="gs1:variantDescription"/>
           <show force="true" id="cm:description"/>
           <show force="true" id="bcpg:packagingDescription"/>
-          <show force="true" id="bcpg:productState"/>
+          <show force="false" id="bcpg:productComments"/>
+          <show force="false" id="bcpg:productState"/>
           <show force="true" id="bcpg:code"/>
           <show force="true" id="bcpg:erpCode"/>
           <show force="true" id="bcpg:casNumber"/>
